<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIT Courant</string>
    <string name="app_version">Versie: %s</string>
    <string name="navigation_drawer_open">Open het menu</string>
    <string name="navigation_drawer_close">Sluit het menu</string>
    <string name="action_settings">Instellingen</string>

    <string name="title_activity_about">Over</string>
    <string name="title_activity_delen">Delen</string>

    <string name="about_developed_by">Deze App is ontwikkeld door Bwebdesign.nl</string>
    <string name="about_get_help">Bezoek onze website voor meer informatie of ondersteuning. Druk op het logo hierboven.</string>
    <string name="app_status">Ophalen van informatie&#8230;</string>

    <string name="courant_plaats_title">HIT %s</string>
    <string name="courant_plaats_tekst">Hier moet informatie over de plaats staan.</string>
    <string name="courant_kamp_title">Naam kamponderdeel</string>
    <string name="courant_kamp_info">Je kan in deze App de informatie van dit kamp bekijken!</string>
    <string name="link_to_website">Link naar website</string>
    <string name="acc_plaats_logo">Logo van de plaats</string>
    <string name="kampen_in_plaats_label">Dit zijn de kampen in %s:</string>
    <string name="separator">|</string>
    <string name="prijs">€ %d</string>
    <string name="dummy_dagen">4 - 6 april</string>
    <string name="dummy_leeftijd">13 - 17 jaar</string>
    <string name="dummy_groep">1 - 3 pers</string>
    <string name="dummy_bedrag">€ 42</string>
    <string name="double_back_to_exit">Druk twee keer om af te sluiten!</string>
    <string name="welcome">Welkom,</string>
    <string name="welcome_intro">Dit jaar kun je kiezen uit de volgende HIT\'s:</string>
    <string name="dummy_plaats">Alphen</string>
    <string name="action_search">Zoeken</string>
    <string name="zoek_intro">Zoek naar je favoriete HIT:</string>
    <string name="leeftijdLabel">Leeftijd:</string>
    <string name="prijsLabel">Prijs:</string>
    <string name="plaatsLabel">Plaats:</string>
    <string name="aantal_gevonden">De volgende %1$d kampen zijn gevonden %2$s:</string>
    <string name="aantal_gevonden_enkelvoud">Het volgende kamp is gevonden %2$s:</string>
    <string name="aantal_gevonden_geen">Er zijn geen kampen gevonden %2$s:</string>
    <string name="hitkiezer_name">HIT Kiezer</string>
    <string name="icoontjes_name">Uitleg icoontjes</string>
    <string name="direct_inschrijven"><![CDATA[Direct inschrijven!]]></string>
    <string name="website_knop">Bezoek de Website</string>
    <string name="icoonLabel">Zoek op icoon:</string>
    <string name="action_share">Delen</string>

</resources>
