<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/zoek_intro"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000001"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowOrderPreserved="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leeftijdLabel"
                />

            <SeekBar
                android:id="@+id/leeftijd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="88"

                android:minWidth="200dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prijsLabel"/>

            <Spinner
                android:id="@+id/prijs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plaatsLabel"/>

            <Spinner
                android:id="@+id/plaats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icoonLabel"/>

            <HorizontalScrollView
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/iconen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_staand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_staand"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_mobieltje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_mobieltje"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_rolstoel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_rolstoel"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_gebouw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_gebouw"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_zeilboot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_zeilboot"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_fiets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_fiets"
                        />

                    <nl.scouting.hit.app.components.HitKiezerIconView
                        android:id="@+id/hit_icon_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/hit_icon_auto"
                        />
                </LinearLayout>
            </HorizontalScrollView>

        </GridLayout>

        <TextView
            android:id="@+id/aantal_gevonden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/aantal_gevonden"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"/>

        <nl.scouting.hit.app.components.ExpandableHeightListView
            android:id="@+id/kampen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:focusable="false"
            android:scrollbars="none"
            android:textColor="#000000"/>
    </LinearLayout>
</ScrollView>
